[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvcache-dynamic-compression-llm-proxy"
version = "1.0.0"
description = "KV Cache + 动态压缩的大模型代理服务 - 降低 Token 成本 40-85%"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "MemOS Team"}
]
keywords = ["llm", "compression", "proxy", "openai", "token-optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
kvcache-proxy = "compress_text_proxy.server:main"

[project.urls]
Homepage = "https://github.com/waveman800/KVCacheDynamicCompressionLLMProxy"
Documentation = "https://github.com/waveman800/KVCacheDynamicCompressionLLMProxy/blob/main/README.md"
Repository = "https://github.com/waveman800/KVCacheDynamicCompressionLLMProxy"

[tool.hatch.build.targets.wheel]
packages = ["src/compress_text_proxy"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
